fix viewport on iOS

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -32,7 +32,8 @@ button {
 
 .input-sm {
   font-size: 13px;
-  padding-top: 0px;
+  padding: 0px;
+  height: fit-content;
 }
 
 body {
